Fixed bug#11435 - If opening navigation bar or sidebar in responsive mode, OTRS jumps back to the top of the window.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
@@ -19,7 +19,6 @@
 
     html.NoScroll,
     html.NoScroll body {
-        height: 100%;
         overflow: hidden;
     }
 
@@ -1138,7 +1137,7 @@
         white-space: nowrap;
     }
 
-    .BreadCrumb li:before, 
+    .BreadCrumb li:before,
     .BreadCrumb li:after {
         top: 50%;
         border-width: 22px;
